<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShambaTimes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Editor #%d</string>

    <!-- Drawer Stuff -->
    <string name="drawer_open">opened</string>
    <string name="drawer_closed">closed</string>

    <string-array name="days">
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="all_and_days">
        <item>All Artists</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="stage_name_amphitheatre">The Amphitheatre</string>
    <string name="stage_name_village">The Village</string>
    <string name="stage_name_living_room">Living Room</string>
    <string name="stage_name_pagoda">Pagoda</string>
    <string name="stage_name_forest">Fractal Forest</string>
    <string name="stage_name_grove">The Grove</string>
    <string name="stage_name_cedar_lounge">Cedar Lounge</string>

    <string name="search_box_hint">Search by artist name</string>

    <string-array name="stages">
        <item>@string/stage_name_pagoda</item>
        <item>@string/stage_name_forest</item>
        <item>@string/stage_name_grove</item>
        <item>@string/stage_name_living_room</item>
        <item>@string/stage_name_village</item>
        <item>@string/stage_name_amphitheatre</item>
        <item>@string/stage_name_cedar_lounge</item>
    </string-array>

    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string-array name="daysOfWeek">
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_alarm">AlarmActivity</string>

    <string name="alarm_time">in %1$s minutes at the\n%2$s</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="ScheduleYears">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>

    <string-array name="GridViewColorDifferenceDisplayed">
        <item>35% (default)</item>
        <item>40%</item>
        <item>45%</item>
        <item>50%</item>
        <item>55%</item>
        <item>60%</item>
        <item>65%</item>
        <item>70%</item>
        <item>75%</item>
    </string-array>

    <string-array name="GridViewColorDifferenceValue">
        <item>0.35</item>
        <item>0.40</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.55</item>
        <item>0.60</item>
        <item>0.65</item>
        <item>0.70</item>
        <item>0.75</item>
    </string-array>

    <string-array name="AlarmTimeDisplayed">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>
        <item>55 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <string-array name="AlarmTimeValue">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string-array name="AlarmLengthDisplayed">
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string-array name="AlarmLengthValue">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="TimeFormatDisplayed">
        <item>24 hour</item>
        <item>12 hour</item>
    </string-array>

    <string-array name="TimeFormatValue">
        <item>24</item>
        <item>12</item>
    </string-array>

    <!-- week view stuff -->

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <string name="tap_target_now_title">Now Playing</string>
    <string name="tap_target_now_description">Press the Now button to see who\'s currently playing</string>

    <string name="tap_target_seen_title">Track who you saw</string>
    <string name="tap_target_seen_description">Long press the hearts to track who you saw play</string>

    <string name="stage_closed">Stage Closed</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="swipe_to_dismiss">Swipe to Dismiss</string>
    <string name="missed_alarm_message">Missed alarm for </string>
    <string name="missed_alarm_title">Missed Alarm</string>
    <string name="jump">Jump</string>
    <string name="to_add_a_favourite_press_the_hearts_beside_an_artists_name">To add a favourite, press the hearts beside an artists name</string>

</resources>




